# jstest-gtk

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  NEWS  README  README.md  SConstruct  TODO  flake.nix  guix.scm  io.gitlab.jstest_gtk.jstest_gtk.json  io.gitlab.jstest_gtk.jstest_gtk_nightly.json  jstest-gtk.appdata.xml.in  jstest-gtk.desktop  jstest-gtk.sh.in
data/: config-example.xml  jstest-gtk.1
src/: axis_widget.cpp  axis_widget.hpp  button_widget.cpp  button_widget.hpp  calibrate_center_dialog.cpp  calibrate_center_dialog.hpp  calibrate_maximum_dialog.cpp  calibrate_maximum_dialog.hpp  device_list_dialog.cpp  device_list_dialog.hpp  device_property_dialog.cpp  device_property_dialog.hpp  device_select_window.cpp  device_select_window.hpp  evdev_helper.cpp  evdev_helper.hpp  joystick.cpp  joystick.hpp  joystick_calibration_widget.cpp  joystick_calibration_widget.hpp  joystick_configuration.cpp  joystick_configuration.hpp  joystick_description.hpp  joystick_device_properties.cpp  joystick_device_properties.hpp  joystick_device_tab.cpp  joystick_device_tab.hpp  joystick_device_test_tab.cpp  joystick_device_test_tab.hpp  joystick_list_widget.cpp  joystick_list_widget.hpp  joystick_map_widget.cpp  joystick_map_widget.hpp  joystick_test_widget.cpp  joystick_test_widget.hpp  jscfg.cpp  main.cpp  main.hpp  remap_widget.cpp  remap_widget.hpp  (+12 more)
